src/assets/css/style.css
/* ... */
.md-show.md-effect-18~.container,
.md-show.md-effect-18~.md-overlay {
  -webkit-transform-style: preserve-3d;
  -webkit-transform-origin: 0% 50%;
  -webkit-animation: rotateRightSideFirst 0.5s forwards ease-in;
  -moz-transform-style: preserve-3d;
  -moz-transform-origin: 0% 50%;
  -moz-animation: rotateRightSideFirst 0.5s forwards ease-in;
  transform-style: preserve-3d;
  transform-origin: 0% 50%;
  animation: rotateRightSideFirst 0.5s forwards ease-in;
}
@-webkit-keyframes rotateRightSideFirst {
  50% {
    -webkit-transform: translateZ(-50px) rotateY(5deg);
    -webkit-animation-timing-function: ease-out;
  }
  100% {
    -webkit-transform: translateZ(-200px);
  }
}
@keyframes rotateRightSideFirst {
  50% {
    -webkit-transform: translateZ(-50px) rotateY(5deg);
    transform: translateZ(-50px) rotateY(5deg);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
  100% {
    -webkit-transform: translateZ(-200px);
    transform: translateZ(-200px);
  }
}
.md-effect-18 .md-content {
  -webkit-transform: translateX(200%);
  transform: translateX(200%);
  opacity: 0;
}
.md-show.md-effect-18 .md-content {
  -webkit-transform: translateX(0);
  transform: translateX(0);
  opacity: 1;
  -webkit-transition: all 0.5s 0.1s;
  transition: all 0.5s 0.1s;
}
.md-show.md-effect-19~.container {
  height: 100%;
  overflow: hidden;
}
.md-show.md-effect-19~.md-overlay {
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}
.md-show.md-effect-19~.container,
.md-show.md-effect-19~.md-overlay {
  -webkit-transform-style: preserve-3d;
  -webkit-transform-origin: 50% 100%;
  -webkit-animation: OpenTop 0.5s forwards ease-in;
  -moz-transform-style: preserve-3d;
  -moz-transform-origin: 50% 100%;
  -moz-animation: OpenTop 0.5s forwards ease-in;
  transform-style: preserve-3d;
  transform-origin: 50% 100%;
  animation: OpenTop 0.5s forwards ease-in;
}
@-webkit-keyframes OpenTop {
  50% {
    -webkit-transform: rotateX(10deg);
    -webkit-animation-timing-function: ease-out;
  }
}
@keyframes OpenTop {
  50% {
    -webkit-transform: rotateX(10deg);
    transform: rotateX(10deg);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
}
.md-effect-19 .md-content {
  -webkit-transform: translateY(-200%);
  transform: translateY(-200%);
  opacity: 0;
}
.md-show.md-effect-19 .md-content {
  -webkit-transform: translateY(0);
  transform: translateY(0);
  opacity: 1;
  -webkit-transition: all 0.5s 0.1s;
  transition: all 0.5s 0.1s;
}
.df {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
.fr {
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
}
.fc {
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
}
.jb {
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}
.jc {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}
.je {
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}
.vt {
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: flex-start;
}
.vc {
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}
.vb {
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: flex-end;
}
.it {
  -ms-flex-item-align: start;
  align-self: flex-start;
}
.ic {
  -ms-flex-item-align: center;
  align-self: center;
}
.ib {
  -ms-flex-item-align: end;
  align-self: flex-end;
}
.fw {
  flex-wrap: wrap;
}
.fwn {
  flex-wrap: nowrap;
}
.embed-responsive-16by9::before {
  padding-top: 56.25%;
}
.embed-responsive {
  position: relative;
  display: block;
  width: 100%;
  padding: 0;
  overflow: hidden;
}
.embed-responsive:before {
  display: block;
  content: "";
}
.embed-responsive .embed-responsive-item,
.embed-responsive embed,
.embed-responsive iframe,
.embed-responsive object,
.embed-responsive video {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
}
.video-bl {
  background: #000;
  position: relative;
}
.yt-toggle-play {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 5;
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  transition: 0.15s all;
  opacity: 1;
}
.yt-toggle-play.in-process {
  pointer-events: none;
  opacity: 0.95;
}
.yt-toggle-play.c-hide {
  opacity: 0;
}
.yt-toggle-play .play-icn {
  transition: 0.2s all;
  width: 15%;
  color: rgba(255,0,0,0.6);
}
.yt-toggle-play:hover .play-icn {
  color: #ff0000;
}
::-webkit-scrollbar {
  width: 10px;
}
::-webkit-scrollbar-track {
  background: white;
}
::-webkit-scrollbar-thumb {
  background: grey;
}
::-webkit-scrollbar-thumb:hover {
  background: #555;
}
.tu {
  width: 0;
  height: 0;
  border-left: 25px solid transparent;
  border-right: 25px solid transparent;
  border-bottom: 50px solid #555;
}
.tb {
  width: 0;
  height: 0;
  border-left: 25px solid transparent;
  border-right: 25px solid transparent;
  border-bottom: 50px solid #555;
}
.tl {
  width: 0;
  height: 0;
  border-top: 25px solid transparent;
  border-right: 50px solid #555;
  border-bottom: 25px solid transparent;
}
.tr {
  width: 0;
  height: 0;
  border-top: 25px solid transparent;
  border-left: 50px solid #555;
  border-bottom: 25px solid transparent;
}
.dn {
  display: none;
}
.center {
  text-align: center;
}
@keyframes opacity {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
.fade {
  animation: opacity 1s;
}
.anim {
  -webkit-transition: 0.3s all ease;
  transition: 0.3s all ease;
}
.ttc {
  transform: translate(-50%,-50%);
  top: 50%;
  left: 50%;
}
/* ... */

